--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 320px;
-  width: 240px;
+  height: 100vh;
+  width: 100vw;
+  /* height: 320px;
+  width: 240px; */
   overflow: hidden;
 }
 
