--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 240px;
-  height: 320px;
+  height: 100vh;
+  width: 100vw;
+  /* width: 240px;
+  height: 320px; */
   background-color: white;
   z-index: 10;
   overflow-y: auto;
@@ -152,6 +154,6 @@ body {
 
 .share-message {
   font-size: 12px;
-  color: #4CAF50;
+  color: #4caf50;
   transition: opacity 0.3s ease-in-out;
 }
