--- a/style.css
+++ b/style.css
@@ -27,13 +27,12 @@ html {
   flex-grow: 1;
   overflow-y: auto;
   padding: 35px 15px 35px 15px;
-  padding: ;
 }
 
 .footer {
   background-color: #3498db;
   color: white;
-  padding: 10px;
+  padding: 8px 0px;
   display: flex;
   justify-content: space-evenly;
   position: fixed;
