--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ html {
 }
 
 .header {
-  background-color: #3498db;
-  color: white;
+  justify-content: left;
+  background-color: #111827;
+  color: #9acee2;
   padding: 5px 10px;
   text-align: center;
   display: flex;
@@ -23,15 +24,21 @@ html {
   width: 100%;
 }
 
+.logo {
+  width: 30px;
+}
+
 .content {
   flex-grow: 1;
   overflow-y: auto;
   padding: 35px 15px 35px 15px;
+  background-color: #223344;
+  color:whitesmoke;
 }
 
 .footer {
-  background-color: #3498db;
-  color: white;
+  background-color: #111827;
+  color: #9acee2;
   padding: 8px 0px;
   display: flex;
   justify-content: space-evenly;
@@ -50,15 +57,16 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
+  background-color: #223344;
+  color: whitesmoke;
   z-index: 10;
   display: flex;
   flex-direction: column;
 }
 
 .menu-header {
-  background-color: #3498db;
-  color: white;
+  background-color: #111827;
+  color: #9acee2;
   padding: 5px 10px;
   display: flex;
   justify-content: space-evenly;
@@ -66,10 +74,11 @@ html {
 
 button {
   margin-right: 5px;
-  color: #3498db;
+  color: #111827;
   padding: 2px 5px;
   border: none;
   border-radius: 8px;
+  background-color: #9acee2;
 }
 
 .menu-content {
@@ -80,7 +89,7 @@ button {
 
 .menu-item {
   padding: 10px;
-  border-bottom: 1px solid #ecf0f1;
+  border-bottom: 1px;
   cursor: pointer;
 }
 
@@ -104,5 +113,10 @@ button {
 }
 
 .selected {
-  background-color: #f1c40f;
+  background-color: #ffe5c1;
+}
+
+.font-selection {
+  border:2px solid #9acee2;
+  border-radius: 8px;
 }
