--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
   overflow-y: auto;
   padding: 35px 15px 35px 15px;
   background-color: #223344;
-  color:whitesmoke;
+  color: whitesmoke;
 }
 
 .footer {
@@ -117,6 +117,16 @@ button {
 }
 
 .font-selection {
-  border:2px solid #9acee2;
+  border: 2px solid #9acee2;
   border-radius: 8px;
+}
+
+.blog-link{
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
+}
+.blog-link a:link, a:visited {
+  text-decoration: none;
+  color: #9acee2;
 }
